fix: caption shouldn't overlap code-tabs. Caption text color should adapt to dark theme.

--- a/assets/styles/layouts/article/_captions.scss
+++ b/assets/styles/layouts/article/_captions.scss
@@ -4,14 +4,9 @@
   font-size: .95rem;
   font-style: italic;
   opacity: .8;
+  color: $article-text;
 
   p { line-height: 1.25rem; }
-}
-
-.code-tabs-wrapper, .code-tab-content {
-  & + .caption {
-    margin-top: -2.75rem;
-  }
 }
 
 p {
